--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,3 @@
-.gallery{
-    display: flex;
-    flex-wrap: wrap;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    justify-content:center;
-}
-
 .gallerybox {
     width: 135px;
 }
@@ -17,17 +8,16 @@
 }
 
 .galleryimage {
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 110px;
     background-color: #53372db9;
-    padding: 10px;
     justify-content: center;
-    display: block;
+    align-items: center;
+    display: flex;
     margin: auto;
 }
 
 .galleryimage img {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
 }
