--- a/css/page.css
+++ b/css/page.css
@@ -7,12 +7,10 @@
 
 body.light-theme * {
     color: black;
-    transition: color 1.5s ease;
 }
 
 body {
     background-image: url("../img/Site-background-dark.webp");
-    transition: color 1.5s ease;
 }
 
 main {
@@ -25,7 +23,7 @@ main {
     padding: 8px 12px;
 }
 
-body a {
+body.dark-theme a {
     color: #ffa62ae3;
     text-decoration: none;
 }
@@ -51,7 +49,7 @@ a:hover{
     text-decoration: underline;
 }
 
-body footer {
+body.dark-theme footer {
     background-color: black;
 }
 
