--- a/css/page.css
+++ b/css/page.css
@@ -97,12 +97,11 @@ body.light-theme #theme-toggle {
     color: black;
 }
 
-.scale {
-    transform: scale(1);
-    transition: transform 0.3s ease;
+button .rotate {
+    display: inline-block;
+    transition: transform 1s ease;
 }
 
-.scale:hover {
-    transform: scale(2);
-    transition: transform 0.3s ease;
+button:hover .rotate {
+    transform: rotateY(180deg);
 }
